django conversion in progress.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
+{% load static %}
 <nav class="blue">
    <div class="nav-wrapper">
      <a href="/" class="brand-logo">
-         <img src="static/img/favicon-96x96.png">
+         <img src="{% static "PBapi/img/favicon-96x96.png" %}">
          PicoBrew Server
      </a>
      <ul id="nav-mobile" class="right hide-on-med-and-down">
