--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PicoBrew Server</title>
+  <title>Django PicoBrew Server</title>
 
-  <link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-icon-114x114.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/static/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
+{#  <link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-icon-72x72.png">#}
+  <link rel="apple-touch-icon" sizes="72x72" href="{% static "PBapi/img/apple-icon-72x72.png" %}">
+
+  <link rel="apple-touch-icon" sizes="114x114" href="{%  static "PBapi/img/apple-icon-114x114.png" %}">
+  <link rel="icon" type="image/png" sizes="192x192"  href="{%  static "PBapi/img/android-icon-192x192.png"%}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static "PBapi/img/favicon-32x32.png" %}">
+  <link rel="icon" type="image/png" sizes="96x96" href="{% static "PBapi/img/favicon-96x96.png" %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static "PBapi/img/favicon-16x16.png" %}">
   <meta name="theme-color" content="#014fa2">
 
-  <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
-  <link type="text/css" rel="stylesheet" href="static/css/main.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="{% static "PBapi/css/materialize.min.css" %}"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="{% static "PBapi/css/main.css"%}"  media="screen,projection"/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -21,7 +24,7 @@
   {% include "navbar.html" %}
   <div class="content container">
     <section class="section">
-      {% with messages = get_flashed_messages() %}
+{#      {% with messages = get_flashed_messages() %}#}
         {% if messages %}
           <div class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign pull-left" aria-hidden="true"></span>
@@ -32,14 +35,14 @@
             </ul>
           </div>
         {% endif %}
-      {% endwith %}
+{#      {% endwith %}#}
     </section>
 
     <section class="section">
       {% block content %}{% endblock %}
     </section>
   </div>
-  <script type="text/javascript" src="static/js/jquery.min.js"></script>
-  <script type="text/javascript" src="static/js/materialize.min.js"></script>
+  <script type="text/javascript" src="{% static "PBapi/js/jquery.min.js"%}"></script>
+  <script type="text/javascript" src="{% static "PBapi/js/materialize.min.js"%}"></script>
 </body>
 </html>
