missed files during last commit

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,9 @@
          <img src="{% static "PBapi/img/favicon-96x96.png" %}">
          PicoBrew Server
      </a>
-     <ul id="nav-mobile" class="right hide-on-med-and-down">
+{#     <ul id="nav-mobile" class="right hide-on-med-and-down">#}
+            <ul  class="right ">
+
        <li><a href="/"><i class="material-icons left">launch</i>Upload Recipe</a></li>
        <li><a href="/recipes"><i class="material-icons left">dashboard</i>Recipe Library</a></li>
      </ul>
