--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,7 +2,7 @@
     <div class="col s12">
         <div class="card-panel">
 
-            <form action="upload" method="POST" enctype="multipart/form-data">
+            <form action="{% url "upload" %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="file-field input-field">
                     <div class="btn">
