--- a/templates/validate.html
+++ b/templates/validate.html
@@ -4,9 +4,8 @@
 <div class="row">
     <div class="col s12">
         <div class="card-panel">
-
-            <form action="/validate_recipe" method="POST" enctype="multipart/form-data">
-
+            <form action="{% url "validate_recipe" %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
                 <div class="row">
                     <div class="col s12">
                         <h4>{{ recipe.name }}</h4>
@@ -56,8 +55,8 @@
 
                                     <tr>
                                         <td>{{ step.name }}</td>
-                                        <td>{{ step.temp }}</td>
-                                        <td>{{ step.time }}</td>
+                                        <td>{{ step.step_temp }}</td>
+                                        <td>{{ step.step_time }}</td>
                                     </tr>
                                 {% endfor %}
 
